--- a/wiki/NppFromACR122ToPhone.wiki
+++ b/wiki/NppFromACR122ToPhone.wiki
@@ -28,4 +28,25 @@ Called rightProcedureTarget..
 [DEBUG] {sending   [50 bytes]} 0xFF 0x00 0x00 0x00 0x2D 0xD4 0x8C 0x01 0x00 0x00 0x00 0x00 0x00 0x40 0x01 0xFE 0x0F 0xBB 0xBA 0xA6 0xC9 0x89 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0xFF 0xFF 0x01 0xFE 0x0F 0xBB 0xBA 0xA6 0xC9 0x89 0x00 0x00 0x06 0x46 0x66 0x6D 0x01 0x01 0x10 0x00 
 }}}
 
-2- The second step is to put the phone on the reader
+2 - The second step is to put the phone on the reader
+http://ismb-npp-java.googlecode.com/files/Putting.jpg
+
+3 - At this point the J2SE application will go on and on the Android phone will appear the following window
+{{{
+Get factory
+Get terminals
+Terminal name: ACS ACR122U 00 00
+T=0
+Called rightProcedureTarget..
+[DEBUG] {sending   [50 bytes]} 0xFF 0x00 0x00 0x00 0x2D 0xD4 0x8C 0x01 0x00 0x00 0x00 0x00 0x00 0x40 0x01 0xFE 0x0F 0xBB 0xBA 0xA6 0xC9 0x89 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0xFF 0xFF 0x01 0xFE 0x0F 0xBB 0xBA 0xA6 0xC9 0x89 0x00 0x00 0x06 0x46 0x66 0x6D 0x01 0x01 0x10 0x00 
+[DEBUG] {receiving [35 bytes]} 0xD5 0x8D 0x26 0x1E 0xD4 0x00 0x01 0xFE 0x0F 0xBB 0xBA 0xA6 0xC9 0x89 0x00 0x00 0x00 0x00 0x00 0x32 0x46 0x66 0x6D 0x01 0x01 0x10 0x03 0x02 0x00 0x01 0x04 0x01 0x96 0x90 0x00 
+[DEBUG] {sending   [7 bytes]} 0xFF 0x00 0x00 0x00 0x02 0xD4 0x86 
+[DEBUG] {receiving [7 bytes]} 0xD5 0x87 0x00 0x00 0x00 0x90 0x00 
+[DEBUG] {sending   [26 bytes]} 0xFF 0x00 0x00 0x00 0x15 0xD4 0x8E 0x05 0x20 0x06 0x0F 0x63 0x6F 0x6D 0x2E 0x61 0x6E 0x64 0x72 0x6F 0x69 0x64 0x2E 0x6E 0x70 0x70 
+[DEBUG] {receiving [5 bytes]} 0xD5 0x8F 0x00 0x90 0x00 
+[DEBUG] {sending   [7 bytes]} 0xFF 0x00 0x00 0x00 0x02 0xD4 0x86 
+[DEBUG] {receiving [11 bytes]} 0xD5 0x87 0x00 0x81 0x90 0x02 0x02 0x00 0x78 0x90 0x00 
+[DEBUG] {sending   [77 bytes]} 0xFF 0x00 0x00 0x00 0x48 0xD4 0x8E 0x43 0x20 0x00 0x01 0x00 0x00 0x00 0x01 0x01 0x00 0x00 0x00 0x39 0xD1 0x01 0x35 0x54 0x02 0x65 0x6E 0x4E 0x50 0x50 0x20 0x74 0x65 0x73 0x74 0x20 0x63 0x6F 0x6D 0x6D 0x75 0x6E 0x69 0x63 0x61 0x74 0x69 0x6F 0x6E 0x20 0x62 0x65 0x74 0x77 0x65 0x65 0x6E 0x20 0x4E 0x45 0x58 0x55 0x53 0x2D 0x53 0x20 0x61 0x6E 0x64 0x20 0x41 0x43 0x52 0x2D 0x31 0x32 0x32 
+[DEBUG] {receiving [5 bytes]} 0xD5 0x8F 0x00 0x90 0x00 
+Finished
+}}}
