--- a/wiki/NppFromPhoneToACR122.wiki
+++ b/wiki/NppFromPhoneToACR122.wiki
@@ -7,7 +7,23 @@ Test Environment and Log obtained in testing NPP (NDEF PUSH PROTOCOL) communicat
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+
+Test Environment: 
+
+http://ismb-npp-java.googlecode.com/files/TestEnvironment.jpg
+
+In the first test on the Android phone, it has been used the SimpleNDEFPusher App (source code and installer available in Downloads section) to send data to an ACR122 reader
+
+So if you want to test the Java code, you need to install such application on your NFC capable phone and execute it. If you don't want to build your own application also the installer is available in Downloads section.
+
+
+*1* - The first step is to execute the Java code (*PhoneToReceiver.java* contained in the archive: http://ismb-npp-java.googlecode.com/files/NppFromPhoneToReader.zip) and then wait until in the console appears the following messages:
+
+{{{
+Get factory
+Get terminals
+Terminal name: ACS ACR122U 00 00
+T=0
+Called rightProcedureReceiver..
+[DEBUG] {sending   [50 bytes]} 0xFF 0x00 0x00 0x00 0x2D 0xD4 0x8C 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x01 0xFE 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x01 0xFE 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x06 0x46 0x66 0x6D 0x01 0x01 0x10 0x00 
+}}}
