Edited wiki page Links through web user interface.

--- a/wiki/Links.wiki
+++ b/wiki/Links.wiki
@@ -8,3 +8,34 @@ Links about NDEF PUSH PROTOCOL, LLCP, ACR122, Controller APDU
 = Details =
 
 Working in Progress
+
+
+
+*Android NDEF Push Protocol Specification:* http://static.googleusercontent.com/external_content/untrusted_dlcp/source.android.com/it//compatibility/ndef-push-protocol.pdf
+
+
+*ACS ACR122 NFC Reader API specification:*
+http://acs.com.hk/drivers/eng/API_ACR122U.pdf
+
+
+*PN532 transmission module for contactless communication at 13.56 MHz used in ACR122:*
+http://www.nxp.com/documents/user_manual/141520.pdf
+This document contains APDU used in java code
+
+
+*PN532 application note:*
+http://www.adafruit.com/datasheets/PN532C106_Application%20Note_v1.2.pdf
+
+
+*LLCP specification (Logical Link Control Protocol):*
+http://www.nfc-forum.org/specs/spec_list/
+Technical specification 
+
+
+*NDEF specification (NFC Data Exchange Format (NDEF)):*
+http://www.nfc-forum.org/specs/spec_list/
+Technical specification
+
+
+*ISMB:*
+http://www.ismb.it
